<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:name="@string/pref_title_data_sync" />
    <SwitchPreference
        android:title="@string/pref_sync_enabled_label"
        android:key="@string/pref_sync_enabled_key"
        android:summaryOff="@string/pref_label_off"
        android:summaryOn="@string/pref_label_on"/>
    <SwitchPreference
        android:title="@string/pref_sync_wifi_only_label"
        android:key="@string/pref_sync_wifi_only_key"
        android:summaryOff="@string/pref_sync_wifi_only_summary_off"
        android:summaryOn="@string/pref_sync_wifi_only_summary_on"/>
    <SwitchPreference
        android:title="@string/pref_sync_only_while_charging_label"
        android:key="@string/pref_sync_only_while_charging_key"
        android:summaryOff="@string/pref_sync_only_while_charging_summary_off"
        android:summaryOn="@string/pref_sync_only_while_charging_summary_on"/>
</PreferenceScreen>